--- a/TMDB_Project/tmdb.html
+++ b/TMDB_Project/tmdb.html
@@ -23,13 +23,14 @@
                 <li><a id="showFavs" class="active">Favorites</a></li>
                 <li><a id="showWatch">Watchlist</a></li>
             </ul>
-        </nav>
-
+        </nav>        
         <div id="moviesResult">
-
+        </div>
+        <div id="loader">
+            <img src="img/spinner.gif"/>
         </div>
     </main>
-
+    
     <footer>
         <img src="img/logoF.svg" width="100px" />
     </footer>
